GPencil: Wrong tool selection when exiting Edit mode. #78155

Closed
opened 2020-06-23 11:28:24 +02:00 by Grégoire Durrens · 19 comments

System Information
Operating system: Linux-5.4.0-37-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: AMD JUNIPER (DRM 2.50.0 / 5.4.0-37-generic, LLVM 9.0.1) X.Org 3.3 (Core Profile) Mesa 20.0.4

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: (newest version of Blender that worked as expected)

Short description of error
Wrong grease pencil tool selection when exiting Edit mode.

Exact steps for others to reproduce the error
New file -> Grease Pencil -> Draw mode -> Draw -> Edit mode -> Draw mode again -> the previous tool is automatically replaced by Airbrush.

WrongToolSelection.gif

Thank you for your work.

**System Information** Operating system: Linux-5.4.0-37-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: AMD JUNIPER (DRM 2.50.0 / 5.4.0-37-generic, LLVM 9.0.1) X.Org 3.3 (Core Profile) Mesa 20.0.4 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: (newest version of Blender that worked as expected) **Short description of error** Wrong grease pencil tool selection when exiting Edit mode. **Exact steps for others to reproduce the error** New file -> Grease Pencil -> Draw mode -> Draw -> Edit mode -> Draw mode again -> the previous tool is automatically replaced by Airbrush. ![WrongToolSelection.gif](https://archive.blender.org/developer/F8638735/WrongToolSelection.gif) Thank you for your work.

Added subscriber: @GregoireDurrens

Added subscriber: @GregoireDurrens

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I cannot reproduce with 2.83 or 2.90. There was a bug on that, but I fixed, so please update to last version and test again.

If the problem persist, please put a step by step detail.

I cannot reproduce with 2.83 or 2.90. There was a bug on that, but I fixed, so please update to last version and test again. If the problem persist, please put a step by step detail.

Thanks Antonio for your reply.
I tried on the latest version, it's the same.
Step by step below...

System Information
Operating system: Linux-5.4.0-37-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: AMD JUNIPER (DRM 2.50.0 / 5.4.0-37-generic, LLVM 9.0.1) X.Org 3.3 (Core Profile) Mesa 20.0.4

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-22 22:06, hash: 51bf04383a

Exact steps to reproduce the error

  1. Open blender
  2. Select 2D animation under "new file"
  3. Draw something with the default "ink pen" and "black" material
  4. Press tab to enter Edit Mode
  5. Press tab again to enter Draw mode
  6. The brush changed to Airbrush and, I just noticed, the material also changed, to "Black Dots"

On both 2.83 and 2.90

Thanks Antonio for your reply. I tried on the latest version, it's the same. Step by step below... **System Information** Operating system: Linux-5.4.0-37-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: AMD JUNIPER (DRM 2.50.0 / 5.4.0-37-generic, LLVM 9.0.1) X.Org 3.3 (Core Profile) Mesa 20.0.4 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-22 22:06, hash: `51bf04383a` **Exact steps to reproduce the error** 1) Open blender 2) Select 2D animation under "new file" 3) Draw something with the default "ink pen" and "black" material 4) Press tab to enter Edit Mode 5) Press tab again to enter Draw mode 6) The brush changed to Airbrush and, I just noticed, the material also changed, to "Black Dots" On both 2.83 and 2.90
Antonio Vazquez changed title from Wrong grease pencil tool selection when exiting Edit mode. to GPencil: Wrong tool selection when exiting Edit mode. 2020-06-23 12:09:31 +02:00

Tested in 2.83

2020-06-23 12-12-19.mp4

Tested in 2.83 [2020-06-23 12-12-19.mp4](https://archive.blender.org/developer/F8638791/2020-06-23_12-12-19.mp4)

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

@lichtwerk Can you reproduce on Linux?

@lichtwerk Can you reproduce on Linux?
Member

In #78155#963047, @antoniov wrote:
@lichtwerk Can you reproduce on Linux?

Nope, cannot reproduce (in 2.83 and 2.90)
@GregoireDurrens Does this happen with Factory Defaults as well?

> In #78155#963047, @antoniov wrote: > @lichtwerk Can you reproduce on Linux? Nope, cannot reproduce (in 2.83 and 2.90) @GregoireDurrens Does this happen with Factory Defaults as well?

No, sorry I should have tried with factory defaults before. It doesn't do it with factory settings.

So that made me remember I have some custom brushes in my startup grease pencil file.
But it is still a surprising and tiny bit annoying behavior if we appended other brushes.
Peek 2020-06-23 14-12.gif

It works fine in 2.82 :
Peek 2020-06-23 14-46.gif

Maybe it's related to the fact that in the versions more recent than 2.82 the tab key doesn't work the same way as in 2.82 (in 2.82, in draw mode, tab brings to edit mode and tab again goes to object mode VS back to previous mode, which is kinda nice)

Thanks

No, sorry I should have tried with factory defaults before. It doesn't do it with factory settings. So that made me remember I have some custom brushes in my startup grease pencil file. But it is still a surprising and tiny bit annoying behavior if we appended other brushes. ![Peek 2020-06-23 14-12.gif](https://archive.blender.org/developer/F8638916/Peek_2020-06-23_14-12.gif) It works fine in 2.82 : ![Peek 2020-06-23 14-46.gif](https://archive.blender.org/developer/F8638969/Peek_2020-06-23_14-46.gif) Maybe it's related to the fact that in the versions more recent than 2.82 the tab key doesn't work the same way as in 2.82 (in 2.82, in draw mode, tab brings to edit mode and tab again goes to object mode VS back to previous mode, which is kinda nice) Thanks

@GregoireDurrens Did you created your custom brushes in 2.83 or it's a file from 2.82?

@GregoireDurrens Did you created your custom brushes in 2.83 or it's a file from 2.82?

in 2.82
I just tried recreating a start up file by deleting all of these brushes and their textures (I cleaned all the orphans as well) but it still selects the airbrush.
Maybe I put the blend file here to see if you can reproduce the issue.

Should I recreate a start up file from scratch in 2.83 ?

Thank you @antoniov

in 2.82 I just tried recreating a start up file by deleting all of these brushes and their textures (I cleaned all the orphans as well) but it still selects the airbrush. Maybe I put the blend file here to see if you can reproduce the issue. Should I recreate a start up file from scratch in 2.83 ? Thank you @antoniov

@GregoireDurrens Yes, please try to recreate the file in 2.83 to check if still the problem exist.

@GregoireDurrens Yes, please try to recreate the file in 2.83 to check if still the problem exist.

Recreating the start up file with 2.83 works.
The problem is not happening anymore.

I guess forward compatibility of the start up file could be slightly improved but that's not critical at all in my opinion.

Thanks a lot for your help !

Recreating the start up file with 2.83 works. The problem is not happening anymore. I guess forward compatibility of the start up file could be slightly improved but that's not critical at all in my opinion. Thanks a lot for your help !

@GregoireDurrens I think we can close the report, no?

If you want, put here a copy of your startup file (2.82) version and I could try to find how improve the conversion, but we cannot consider it as a bug.

@GregoireDurrens I think we can close the report, no? If you want, put here a copy of your startup file (2.82) version and I could try to find how improve the conversion, but we cannot consider it as a bug.

Yeah I agree, it's not worth reporting a bug.
Here are two startup files : 2.82 and the new 2.83 that I recreated.

startup2-82.blend
startup2-83.blend

Yeah I agree, it's not worth reporting a bug. Here are two startup files : 2.82 and the new 2.83 that I recreated. [startup2-82.blend](https://archive.blender.org/developer/F8642356/startup2-82.blend) [startup2-83.blend](https://archive.blender.org/developer/F8642357/startup2-83.blend)

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Antonio Vazquez self-assigned this 2020-06-25 09:28:28 +02:00

@GregoireDurrens I was able to reproduce the problem and I think I have finally fixed it in the commit 47ff54b008

@GregoireDurrens I was able to reproduce the problem and I think I have finally fixed it in the commit 47ff54b0080b

Amazing.
@antoniov : Glad we got this improved !

Amazing. @antoniov : Glad we got this improved !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78155
No description provided.