GPencil: Ensure previous brush is set when change mode

In some situations, the previous brush is not set. This usually happens with previous version files.

Related to T78155.